# patmos-llvm-project

./: README-Patmos.MD
.github/actions/build-test/: action.yml
.github/actions/build-test-all/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/llvm-test-unit-reg/: action.yml
.github/actions/test-benchmarks/: action.yml
.github/workflows/: clang-tests.yml  libclang-abi-tests.yml  libclc-tests.yml  lld-tests.yml  lldb-tests.yml  llvm-tests.yml  patmos-ci.yml  patmos-tests.yml
clang/lib/Basic/: CMakeLists.txt  Targets.cpp
clang/lib/Basic/Targets/: Patmos.h  (+1 more)
clang/lib/CodeGen/: CGStmt.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp  TargetInfo.cpp  TargetInfo.h
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Parse/: ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: SemaDeclAttr.cpp  SemaStmtAttr.cpp
clang/test/: CMakeLists.txt
clang/test/Driver/: CMakeLists.txt
clang/test/Driver/Patmos/mock-binaries/: CMakeLists.txt  README.md  illegal.c  patmos-ld.c
clang/test/Misc/: pragma-attribute-supported-attributes-list.test
clang/utils/: creduce-clang-crash.py
compiler-rt/cmake/: base-config-ix.cmake  builtin-config-ix.cmake  patmos-clang-toolchain.cmake
compiler-rt/cmake/Modules/: CompilerRTUtils.cmake
compiler-rt/lib/builtins/: CMakeLists.txt
lld/: README-Patmos.md
lld/ELF/: CMakeLists.txt  Driver.cpp  InputFiles.cpp  ScriptParser.cpp  Target.cpp  Target.h
lld/ELF/Arch/: Patmos.cpp
lld/test/: lit.cfg.py
llvm/: CMakeLists.txt
llvm/lib/Support/: Triple.cpp
llvm/lib/TargetParser/: Triple.cpp
(+343 files in other folders)
